--- a/StreamingSiteUI/src/app/register/register.component.html
+++ b/StreamingSiteUI/src/app/register/register.component.html
@@ -1,26 +1,59 @@
 
 <div class="main">
-    <div class="container row">
-        <div class="coming-soon-poster col-md-5">
-            <img src="assets/images/coming-soon.jpg" style="width:120%;height:100%;">
-        </div>
-        <div>
+        <div class="container row">
+        <div class="coming-soon-poster col-md-8">
+            <img class="banner" src="assets/images/banner2.jpg">
+        </div>  
+        <div class="col-md-4" style="background:white;padding-top:70px;height:100vh;">
             <div>
                 <h3>Sign up</h3>
-                <p>Create your account easy with less information</p>
-                <form action="" [formGroup]="registerForm" (ngSubmit)="register()">
+                <h5>Fields With * are required</h5>
+                
+                <form [formGroup]="registerForm" (ngSubmit)="register()">
+                    <div class="form-group">
+                            <label><input type="text" placeholder="First Name *" formControlName="first_name" class="form-control"/></label>
+                            <div class="messages text-danger" *ngIf="registerForm.controls.first_name.errors?.required && registerForm.controls.first_name.touched">First Name shouldn't be blank</div>
+                                                
+                    </div>
+                    <div class="form-group">
+                            <label><input type="text" placeholder="Last Name *" formControlName="second_name" class="form-control"/></label>
+                            <div class="messages text-danger" *ngIf="registerForm.controls.second_name.errors?.required && registerForm.controls.second_name.touched">Last Name shouldn't be blank</div>
+                                
+                        </div>
+                        <div class="form-group">
+                                <label><input type="email" placeholder="Email"formControlName="email" class="form-control"/></label>
+                                <!-- <div class="messages text-danger" >Phone Number shouldn't be blank</div> -->
+                                
+                            </div>
+                        <div class="form-group">
+                                <label><input type="tel" placeholder="Phone Number:e.g 2547XXXXXXXX *" pattern="^[a-z0-9_-]{8,15}$" formControlName="phone_number" class="form-control"/></label>
+                                <!-- <div class="messages text-danger" *ngIf="registerForm.controls.phone_number.errors?.required && registerForm.controls.phone_number.touched">Phone Number shouldn't be blank</div> -->
+                                
+                            </div>
+                      
+                            <div class="form-group">
+                                    <label><input type="password" placeholder="Password *" class="password" formControlName="password" class="form-control"/></label>
+                                    <div class="messages text-danger" *ngIf="registerForm.controls.password.errors?.required && registerForm.controls.password.touched">This field shouldn't be blank</div>
+                                
+                                </div>
+                                <div class="form-group">
+                                        <label><input type="password" placeholder="Confirm Password *" class="password" formControlName="c_password" class="form-control"/></label>
+                                        <div class="messages text-danger" *ngIf="registerForm.controls.c_password.errors?.required && registerForm.controls.c_password.touched">This field shouldn't be blank</div>
+                                
+                                    </div>
+                                    
+                                            <label><input type="submit" value="Create Account" class="form-control"/></label>
+                                     
                     
-                    <label><input type="text" placeholder="First Name" class="email" formControlName="first_name"/></label>
-                    <label><input type="text" placeholder="Last Name" class="email" formControlName="second_name"/></label>
-                    <label><input type="email" placeholder="Email" class="email" formControlName="email"/></label>
-                    <label><input type="password" placeholder="Password" class="password" formControlName="password"/></label>
-                    <label><input type="password" placeholder="Confirm Password" class="password" formControlName="c_password"/></label>
-                    <label><input type="submit" value="Create Account" /></label>
+                    
+                   
+                    
+                    
+                    
+                    
                 </form>
             </div>
+        </div>  
             
-
-            
-        </div>
-    </div>
+</div>
 </div>
