--- a/StreamingSiteUI/src/app/recentlyadded/recentlyadded.component.html
+++ b/StreamingSiteUI/src/app/recentlyadded/recentlyadded.component.html
@@ -1,18 +1,10 @@
 
 <div id="page-wrapper">
-  
-    <div class="tittle-head">
-        <h3 class="tittle">New Releases
-          <span class="new">New</span>
-        </h3>
-    
-        <div class="clearfix"> </div>
-      </div>
-
-  <main>   
+  <div class="row-container">
+    <div class="row movie-row">
       
-    <div class="row">
-      <div class="movie" *ngFor="let media_item of media_listing| slice:0:6; let i=index" (click) ="openInfoOverlay(media_item.media_name)">
+      <div class="movie" *ngFor="let media_item of media_listing| slice:0:5" (click) ="openInfoOverlay(media_item.media_name,media_item.id)">
+
         <div class="text">
           <h2>{{media_item.media_name}}</h2>
           <div class="rating">
@@ -22,35 +14,35 @@
             <div class="dot "></div>
             <div class="dot"></div>
           </div>
-          <p class="year">2015</p>
-          <p class="genre">Action | Science Fiction</p>
+         
           <p>{{media_item.description}}</p>
           
         </div>
         <div class="cover_blur" style="background-image: url(https://image.tmdb.org/t/p/w1280/zNjxzdgSwzRXnP8Stu3HGzKQKWp.jpg)"></div>
-        <div class="cover" ><img src="http://localhost:8000/api/image/{{media_item.id}}" style="width:100%;height:100%;border-radius:10px;"></div>
-      </div>
-      <!-- <div class="movie">
-        <div class="text">
-          <h2>The Martian</h2>
-          <div class="rating">
-            <div class="dot dot-full"></div>
-            <div class="dot dot-full"></div>
-            <div class="dot dot-full"></div>
-            <div class="dot dot-full"></div>
-            <div class="dot"></div>
-          </div>
-          <p class="year">2015</p>
-          <p class="genre">Action | Science Fiction</p>
-          <p>During a manned mission to Mars, Astronaut Mark Watney is presumed dead after a fierce storm and left behind by his crew. But Watney has survived and finds himself stranded and alone on the hostile planet.</p>
-          <div class="button"> &nbsp;Watch Trailer</div>
+        <div class="cover" ><img src="http://www.jaluotv.com/server/api/image/{{media_item.id}}" style="width:100%;height:70%;">
+          <div class="overlay-text">
+            <h4 style="color:white" >
+                {{media_item.media_name}}
+            </h4>
         </div>
-        <div class="cover_blur" style="background-image: url(https://image.tmdb.org/t/p/w600_and_h900_bestv2/5aGhaIHYuQbqlHWvWYqMCnj40y2.jpg)"></div>
-        <div class="cover" style="background-image: url(https://image.tmdb.org/t/p/w600_and_h900_bestv2/5aGhaIHYuQbqlHWvWYqMCnj40y2.jpg)"></div>
-      </div>
-      <div class="movie">
+          
+        </div>
+     
+    </div>
+              
+  </div>
+
+ 
+ 
+ 
+  </div>
+  <div class="row-container">
+    <div class="row movie-row">
+      
+      <div class="movie" *ngFor="let media_item of media_listing| slice:6:11" (click) ="openInfoOverlay(media_item.media_name,media_item.id)">
+
         <div class="text">
-          <h2>Star Wars: The Force Awakens</h2>
+          <h2>{{media_item.media_name}}</h2>
           <div class="rating">
             <div class="dot dot-full"></div>
             <div class="dot dot-full"></div>
@@ -58,70 +50,132 @@
             <div class="dot "></div>
             <div class="dot"></div>
           </div>
-          <p class="year">2015</p>
-          <p class="genre">Action | Science Fiction</p>
-          <p>Thirty years after defeating the Galactic Empire, Han Solo and his allies face a new threat from the evil Kylo Ren and his army of Stormtroopers.</p>
-          <div class="button"> &nbsp;Watch Trailer</div>
+         
+          <p>{{media_item.description}}</p>
+          
         </div>
-        <div class="cover_blur" style="background-image: url(https://image.tmdb.org/t/p/w600_and_h900_bestv2/vZpB8ezB1IqpxI9rx553TuGwDzJ.jpg)"></div>
-        <div class="cover" style="background-image: url(https://image.tmdb.org/t/p/w600_and_h900_bestv2/vZpB8ezB1IqpxI9rx553TuGwDzJ.jpg)"></div>
-      </div>
-      <div class="movie">
-        <div class="text">
-          <h2>Daddy's Home</h2>
-          <div class="rating">
-            <div class="dot dot-full"></div>
-            <div class="dot dot-full"></div>
-            <div class="dot dot-full"></div>
-            <div class="dot dot-full"></div>
-            <div class="dot dot-full"></div>
-          </div>
-          <p class="year">2015</p>
-          <p class="genre">Action | Science Fiction</p>
-          <p>Stepdad, Brad Whitaker, is a radio host trying to get his stepchildren to love him and call him Dad. But his plans turn upside down when the father returns.</p>
-          <div class="button"> &nbsp;Watch Trailer</div>
+        <div class="cover_blur" style="background-image: url(https://image.tmdb.org/t/p/w1280/zNjxzdgSwzRXnP8Stu3HGzKQKWp.jpg)"></div>
+        <div class="cover" ><img src="http://www.jaluotv.com/server/api/image/{{media_item.id}}" style="width:100%;height:70%;">
+          <div class="overlay-text">
+            <h4 style="color:white" >
+                {{media_item.media_name}}
+            </h4>
         </div>
-        <div class="cover_blur" style="background-image: url(https://image.tmdb.org/t/p/w1280/diEAZtU6KJzo6VStL5US8arkdIQ.jpg)"></div>
-        <div class="cover" style="background-image: url(https://image.tmdb.org/t/p/w1280/diEAZtU6KJzo6VStL5US8arkdIQ.jpg)"></div>
-      </div>
-      <div class="movie">
-        <div class="text">
-          <h2>Concussion</h2>
-          <div class="rating">
-            <div class="dot dot-full"></div>
-            <div class="dot dot-full"></div>
-            <div class="dot dot-full"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
-          </div>
-          <p class="year">2015</p>
-          <p class="genre">Action | Science Fiction</p>
-          <p>In Pittsburgh, an accomplished pathologist uncovers the truth about brain damage in football players who suffer repeated concussions in the course of normal play.</p>
-          <div class="button"> &nbsp;Watch Trailer</div>
+          
         </div>
-        <div class="cover_blur" style="background-image: url(https://image.tmdb.org/t/p/w1280/vdK1f9kpY5QEwrAiXs9R7PlerNC.jpg)"></div>
-        <div class="cover" style="background-image: url(https://image.tmdb.org/t/p/w1280/vdK1f9kpY5QEwrAiXs9R7PlerNC.jpg)"></div>
-      </div>
-      <div class="movie">
-        <div class="text">
-          <h2>Room</h2>
-          <div class="rating">
-            <div class="dot dot-full"></div>
-            <div class="dot dot-full"></div>
-            <div class="dot dot-full"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
-          </div>
-          <p class="year">2015</p>
-          <p class="genre">Drama | Thriller</p>
-          <p>Jack is a young boy of 5 years old who has lived all his life in one room. He believes everything within it are the only real things in the world.</p>
-          <div class="button"> &nbsp;Watch Trailer</div>
-        </div>
-        <div class="cover_blur" style="background-image: url(https://image.tmdb.org/t/p/w1280/eqFckcHuFCT1FrzLOAvXBb4jHwq.jpg)"></div>
-        <div class="cover" style="background-image: url(https://image.tmdb.org/t/p/w1280/eqFckcHuFCT1FrzLOAvXBb4jHwq.jpg)"></div>
-      </div> -->
+     
     </div>
-  </main>
+              
+  </div>
+
+ 
+ 
+ 
+  </div>
+  <div class="row-container">
+    <div class="row movie-row">
+      
+      <div class="movie" *ngFor="let media_item of media_listing| slice:12:15" (click) ="openInfoOverlay(media_item.media_name,media_item.id)">
+
+        <div class="text">
+          <h2>{{media_item.media_name}}</h2>
+          <div class="rating">
+            <div class="dot dot-full"></div>
+            <div class="dot dot-full"></div>
+            <div class="dot dot-full"></div>
+            <div class="dot "></div>
+            <div class="dot"></div>
+          </div>
+         
+          <p>{{media_item.description}}</p>
+          
+        </div>
+        <div class="cover_blur" style="background-image: url(https://image.tmdb.org/t/p/w1280/zNjxzdgSwzRXnP8Stu3HGzKQKWp.jpg)"></div>
+        <div class="cover" ><img src="http://www.jaluotv.com/server/api/image/{{media_item.id}}" style="width:100%;height:70%;">
+          <div class="overlay-text">
+            <h4 style="color:white" >
+                {{media_item.media_name}}
+            </h4>
+        </div>
+          
+        </div>
+     
+    </div>
+              
+  </div>
+
+ 
+ 
+ 
+  </div>
   
 
+</div>
+<div class="footer">
+    <div class="footer-grid">
+      <h3>Navigation</h3>
+      <ul class="list1">
+        <li>
+          <a routerLink="home">Home</a>
+        </li>
+        <li>
+          <a routeLink="movies">Movies</a>
+        </li>
+        <li>
+          <a href="recently_added">Recently Added</a>
+        </li>
+      </ul>
+    </div>
+  
+  <div class="clearfix"> </div>
+
+</div>
+<div class="w3-center col-md-12" style="height:60px;background:#333">
+  <h4 style="color:white">&#169; JaluoTV 2018 . Powered By KelaCreations </h4>
+</div>
+
+
+<div *ngIf="overlayOpen" class="info-overlay col-md-12" style="position:fixed;top:0;background:rgba(0, 0, 0, 0.864);width:100%;height:100%;z-index:99999;">
+  <div class="exit-button-holder" style="position:fixed;right:15px;top:10px;z-index:100000">
+    <button (click)="closeInfoOverlay()" class="exit-button">
+      <h2 style="color:white">
+        X
+      </h2>
+    </button>
+  </div>
+  <div class="info-overlay-image" oncontextmenu="return false" style="height:100%;">
+      <vg-player (onPlayerReady)="onPlayerReady($event)">
+          <!-- <vg-overlay-play></vg-overlay-play> -->
+          <vg-controls>
+              
+              <vg-play-pause></vg-play-pause>
+              
+        
+              <vg-time-display vgProperty="current" vgFormat="hh:mm:ss"></vg-time-display>
+        
+              <vg-scrub-bar>
+                  <vg-scrub-bar-current-time></vg-scrub-bar-current-time>
+                  <vg-scrub-bar-buffering-time></vg-scrub-bar-buffering-time>
+              </vg-scrub-bar>
+        
+              <vg-time-display vgProperty="total" vgFormat="hh:mm:ss"></vg-time-display>
+        
+              <vg-mute></vg-mute>
+              <vg-volume></vg-volume>
+        
+              <vg-fullscreen></vg-fullscreen>
+          </vg-controls>
+        
+          <video #media [vgMedia]="media" id="singleVideo" preload="auto" crossorigin style="height:100%;width:100%">
+
+              <source src="{{video_url}}" type="video/mp4" />
+            </video>
+       </vg-player>
+    
+
+    
+  </div>
+  <div class="col-md-6" style="position:relative;top:100px;">
+
+  </div>
 </div>
