--- a/StreamingSiteUI/src/app/userlist/userlist.component.html
+++ b/StreamingSiteUI/src/app/userlist/userlist.component.html
@@ -3,45 +3,49 @@
   
         <div class="tittle-head">
             <h3 class="tittle">Continue watching
-              <span class="new">New</span>
+              
             </h3>
-            <div style="position: absolute; right: 10px;  ">
-              <form role="search" method="get" id="searchform" class="searchform" action="#" _lpchecked="1">
-    
-                <div class="searchboxwrapper">
-                  
-                <input class="searchbox" type="text" value="" name="s" placeholder="Search for" id="s">
-                  
-                <input class="searchsubmit" type="submit" id="searchsubmit" value="">
-                  
-                </div>
-                </form>
-            </div>
+           
         
             <div class="clearfix"> </div>
           </div>
           
-        <div class="row">
-          <div class="movie" *ngFor="let media_item of media_listing| slice:0:6; let i=index" (click) ="openInfoOverlay(media_item.media_name)">
-            <div class="text">
-              <h2>{{media_item.media_name}}</h2>
-              <div class="rating">
-                <div class="dot dot-full"></div>
-                <div class="dot dot-full"></div>
-                <div class="dot dot-full"></div>
-                <div class="dot "></div>
-                <div class="dot"></div>
-              </div>
-              <p class="year">2015</p>
-              <p class="genre">Action | Science Fiction</p>
-              <p>{{media_item.description}}</p>
+          <div class="row-container">
+            <div class="row movie-row">
               
+              <div class="movie" *ngFor="let media_item of media_listing| slice:0:5" (click) ="openInfoOverlay(media_item.media_name,media_item.id)">
+        
+                <div class="text">
+                  <h2>{{media_item.media_name}}</h2>
+                  <div class="rating">
+                    <div class="dot dot-full"></div>
+                    <div class="dot dot-full"></div>
+                    <div class="dot dot-full"></div>
+                    <div class="dot "></div>
+                    <div class="dot"></div>
+                  </div>
+                 
+                  <p>{{media_item.description}}</p>
+                  
+                </div>
+                <div class="cover_blur" style="background-image: url(https://image.tmdb.org/t/p/w1280/zNjxzdgSwzRXnP8Stu3HGzKQKWp.jpg)"></div>
+                <div class="cover" ><img src="http://www.jaluotv.com/server/api/image/{{media_item.id}}" style="width:100%;height:70%;">
+                  <div class="overlay-text">
+                    <h4 style="color:white" >
+                        {{media_item.media_name}}
+                    </h4>
+                </div>
+                  
+                </div>
+             
             </div>
-            <div class="cover_blur" style="background-image: url(https://image.tmdb.org/t/p/w1280/zNjxzdgSwzRXnP8Stu3HGzKQKWp.jpg)"></div>
-            <div class="cover" ><img src="http://localhost:8000/api/image/{{media_item.id}}" style="width:100%;height:100%;border-radius:10px;"></div>
+                      
           </div>
-          
-        </div>
+        
+         
+         
+         
+          </div>
         <div class="clearfix"> </div>
         <div class="row">
           <div class="movie" *ngFor="let media_item of media_listing| slice:7:13; let i=index" (click) ="openInfoOverlay(media_item.media_name)">
@@ -60,7 +64,7 @@
               
             </div>
             <div class="cover_blur" style="background-image: url(https://image.tmdb.org/t/p/w1280/zNjxzdgSwzRXnP8Stu3HGzKQKWp.jpg)"></div>
-            <div class="cover" ><img src="http://localhost:8000/api/image/{{media_item.id}}" style="width:100%;height:100%;border-radius:10px;"></div>
+            <div class="cover" ><img src="http://www.jaluotv.com/server/api/image/{{media_item.id}}" style="width:100%;height:100%;border-radius:10px;"></div>
           </div>
           
         </div>
@@ -82,11 +86,78 @@
               
             </div>
             <div class="cover_blur" style="background-image: url(https://image.tmdb.org/t/p/w1280/zNjxzdgSwzRXnP8Stu3HGzKQKWp.jpg)"></div>
-            <div class="cover" ><img src="http://localhost:8000/api/image/{{media_item.id}}" style="width:100%;height:100%;border-radius:10px;"></div>
+            <div class="cover" ><img src="http://www.jaluotv.com/server/api/image/{{media_item.id}}" style="width:100%;height:100%;border-radius:10px;"></div>
           </div>
           
         </div>
       
     
     </div>
+    <div class="footer">
+      <div class="footer-grid">
+        <h3>Navigation</h3>
+        <ul class="list1">
+          <li>
+            <a routerLink="home">Home</a>
+          </li>
+          <li>
+            <a routeLink="movies">Movies</a>
+          </li>
+          <li>
+            <a href="recently_added">Recently Added</a>
+          </li>
+        </ul>
+      </div>
+    
+    <div class="clearfix"> </div>
+  
+  </div>
+  <div class="w3-center col-md-12" style="height:60px;background:#333">
+    <h4 style="color:white">&#169; JaluoTV 2018 . Powered By KelaCreations </h4>
+  </div>
+  
+    
+    <div *ngIf="overlayOpen" class="info-overlay col-md-12" style="position:fixed;top:0;background:rgba(0, 0, 0, 0.864);width:100%;height:100%;z-index:99999;">
+      <div class="exit-button-holder" style="position:fixed;right:15px;top:10px;z-index:100000">
+        <button (click)="closeInfoOverlay()" class="exit-button">
+          <h2 style="color:white">
+            X
+          </h2>
+        </button>
+      </div>
+      <div class="info-overlay-image" oncontextmenu="return false" style="height:100%;">
+          <vg-player (onPlayerReady)="onPlayerReady($event)">
+              <vg-overlay-play></vg-overlay-play>
+              <vg-controls>
+                  
+                  <vg-play-pause></vg-play-pause>
+                  
+            
+                  <vg-time-display vgProperty="current" vgFormat="hh:mm:ss"></vg-time-display>
+            
+                  <vg-scrub-bar>
+                      <vg-scrub-bar-current-time></vg-scrub-bar-current-time>
+                      <vg-scrub-bar-buffering-time></vg-scrub-bar-buffering-time>
+                  </vg-scrub-bar>
+            
+                  <vg-time-display vgProperty="total" vgFormat="hh:mm:ss"></vg-time-display>
+            
+                  <vg-mute></vg-mute>
+                  <vg-volume></vg-volume>
+            
+                  <vg-fullscreen></vg-fullscreen>
+              </vg-controls>
+            
+              <video #media [vgMedia]="media" id="singleVideo" preload="auto" crossorigin style="height:100%;width:100%">
+    
+                  <source src="{{video_url}}" type="video/mp4" />
+                </video>
+           </vg-player>
+        
+    
+        
+      </div>
+      <div class="col-md-6" style="position:relative;top:100px;">
+    
+      </div>
     
