--- a/StreamingSiteUI/src/styles.css
+++ b/StreamingSiteUI/src/styles.css
@@ -24,3 +24,19 @@ app-discover {
 #page-wrapper {
     height:100%;
 } */
+.movie {
+    font-size: 12px;
+    position: relative;
+    z-index: 0;
+    display: block;
+    overflow: visible;
+    border-radius: 10px;
+    height: 20vw;
+    transition: 350ms ease-in-out;
+    transform: scale(1);
+    background-color: #F1EEEA;
+    will-change: transform, z-index;
+    white-space: normal;
+    margin-right: 20px;
+    width:200px;
+  }
